fix display issue on safari osx/ios

--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
     color: #AAA;
 }
 
+h2 {
+    padding-top: 20px;
+    margin-bottom: 0;
+}
+
 .sidebar {
     background: black;
     position: absolute;
@@ -11,6 +16,11 @@ body {
     top: 100px;
     bottom: 0;
     width: 400px;
+}
+
+.div-label {
+    float: left;
+    width: 100%;
 }
 
 #simluation {
